--- a/koha-tmpl/opac-tmpl/npl/en/includes/marc-editor.css
+++ b/koha-tmpl/opac-tmpl/npl/en/includes/marc-editor.css
@@ -1,41 +1,91 @@
+div.tabbed {
+	/*border : 1px solid red;
+	position: absolute;*/
+	margin-left:5%;
+	width:90%;
+/*	display:block;*/
+}
+
 div.tabs {
-	width:10px;
-	position:absolute;
-	margin-left:50px;
-	margin-top:120px;
+/*	border : 1px solid aqua;*/
+	float : left;
+	margin : 5px 0 0 0;
+/*	position:absolute;
+	margin-left: .5em;
+	margin-top:110px;*/
 }
 
 div.tabs a {
 	display:block;
-	font-size: small;
-	border: thin solid black;
-	margin-right: 2px;
-	padding: 10px 10px;
-	-moz-border-radius: 5px 0px 0px 5px;
+	background-color: #D8DEB8;
+	color: #000066;
+	font-weight : bold;
+	text-decoration : none;
+	border-bottom : 1px solid #999933;
+	border-left : 1px solid #999933;
+	border-right : 1px solid #FFFFCC;
+	border-top : 1px solid #FFFFCC;
+	margin : 0 0 2px 0;
+	padding: 10px 5px 10px 5px;
+	
+}
+
+div.tabs a:hover {
+	background-color : #CCFF99;
+	border-left : 1px solid #000066;
+	border-bottom : 1px solid #000066;
 }
 
 div.tab {
-	background-color: #FFFFCC;
+	background-color : #FFFFCC;
+	border : 1px solid #D8DEB8;
+	border-top : 1px solid #FFFFCC;
 	display: block;
 	visibility:hidden;
-	position:absolute;
-
-}
-td {
-	border:0px;
-}
-
-.MARCtag { /* style for tag definition (700 - Statement of responsability) */
-	font-weight:bold;
-	color:#FF6600;
-	background-color:FFFFFF;
-	background-image:none;
-	border-bottom: 1px solid #999900;
-	margin-right:30%;
+	position : absolute;
+	margin : 5px 0 0 55px;
+	padding : 3px 3px 3px 10px;
+	width : 70%;
+	/*margin-top:110px;*/
 }
 
-.labelsubfield { /* style for each subfield (like : a Publication year), just before the biblio subfield */
-	float:left;
-	width: 12em;
-	margin-left:30px;
+/* style for tag definition (e.g. 700 - Statement of responsibility) */
+.MARCtag { 
+	clear : left;
+	color : #000000;
+	background-color : #FFFFCC;
+	border-top : 7px solid #FFFFCC;
+	border-bottom : thin solid #CCCC99;
+	font-weight : bold;
+	font-size : .8em;
+	margin-top : 5px;
 }
+
+div.tab p {
+	margin : 3px;
+}	
+
+/* style for each subfield (e.g.: Publication year), just before the biblio subfield */
+.labelsubfield { 
+	background-color : #FFFFE1;
+/*	border : 1px solid red;*/
+	clear : left;
+	float : left;
+	font-size : .8em;
+	font-weight : normal;
+	width : 12em;
+	margin-left : 30px;
+	display : inline;
+}
+
+#loading {
+	position: absolute;
+	top: 3em;
+	left: 3em;
+	padding: 1em;
+	mozopacity: 50%;
+	background-color: #FFFFFF;
+	border: 10px solid #CCCC99;
+	font-size: 1.5em;
+	z-index: 999;
+	}
