Displaying overdues with red font.

--- a/koha-tmpl/opac-tmpl/css/en/includes/opac.css
+++ b/koha-tmpl/opac-tmpl/css/en/includes/opac.css
@@ -267,6 +267,17 @@ select:hover {
 
 /* BLOCS */
 
+#problem {
+	color: white;
+	font-weight:bold;
+	background-color:red;
+}
+.problem {
+	color: white;
+	font-weight:bold;
+	background-color:red;
+}
+
 /* the mainbloc : everything is in mainbloc, except menu */
 #mainbloc {
 	float:left;
