translated by hellen

--- a/koha-tmpl/intranet-tmpl/default/de/bookshelves/shelves.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/de/bookshelves/shelves.tmpl
@@ -10,7 +10,7 @@
 			<table class="small">
 				<tr colspan="4">
 					<th class="catalogue">l&ouml;schen</th>
-					<th class="catalogue">Strichcode</th>
+					<th class="catalogue">Barcode</th>
 					<th class="catalogue">Titel</th>
 					<th class="catalogue">Verfasser</th>
 				</tr>
@@ -27,7 +27,7 @@
 			<input type="hidden" name="modifyshelfcontents" value="1">
 			<input type="hidden" name="viewshelf" value="<!-- TMPL_VAR NAME="shelfnumber" -->">
 			<!-- TMPL_IF name="manageshelf" -->
-				<input type="submit" value="Ausgew&auml;hlte exemplare l&ouml;schen" class="button catalogue">
+				<input type="submit" value="Ausgew&auml;hlte Exemplare l&ouml;schen" class="button catalogue">
 			<!-- /TMPL_IF -->
 		</div>
 	</form>
@@ -105,7 +105,7 @@
 		</div>
 	<!-- TMPL_ELSE -->
 		<div id="bloc25">
-			<h2 class="catalogue">Shelf-Liste</h2>
+			<h2 class="catalogue">Regalliste</h2>
 			<table class="small">
 				<tr>
 					<th class="catalogue">Regal-Name</th>
@@ -144,7 +144,7 @@
 			</table>
 		</div>
 		<div id="bloc25">
-			<a href="shelves.pl?shelves=1" class="button catalogue">Virtueles Regal hinzuf&uuml;gen oder l&ouml;schen</a>
+			<a href="shelves.pl?shelves=1" class="button catalogue">Virtuelles Regal hinzuf&uuml;gen oder l&ouml;schen</a>
 		</div>
 	<!-- /TMPL_IF -->
 <!-- /TMPL_IF -->
