--- a/koha-tmpl/intranet-tmpl/default/de/parameters/aqbudget.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/de/parameters/aqbudget.tmpl
@@ -106,7 +106,7 @@
 				<label class="label100">Erwerbungsetat</label><input type="hidden" name="bookfundid" value="<!-- TMPL_VAR NAME="bookfundid" -->"><!-- TMPL_VAR NAME="bookfundid" -->
 			</p>
 			<p>
-				<label class="label100">Name des Etats</label><!-- TMPL_VAR NAME="bookfundname" -->
+				<label class="label100">Etatname</label><!-- TMPL_VAR NAME="bookfundname" -->
 			</p>
 		<!-- /TMPL_IF -->
 		
