Displaying system preferences by category

--- a/koha-tmpl/intranet-tmpl/default/en/parameters/systempreferences.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/en/parameters/systempreferences.tmpl
@@ -136,6 +136,42 @@
 	
 	<!-- TMPL_IF NAME="else" -->
 	<h1>System preferences admin</h1>
+	<table>
+		<tr>
+			<td>
+				<a href="/cgi-bin/koha/admin/systempreferences.pl?tab=Admin">Admin
+				</a>
+			</td>
+			<td>
+				<a href="/cgi-bin/koha/admin/systempreferences.pl?tab=Acquisitions">Acquisitions
+				</a>
+			</td>
+			<td>
+				<a href="/cgi-bin/koha/admin/systempreferences.pl?tab=Authorities">Authorities
+				</a>
+			</td>
+			<td>
+				<a href="/cgi-bin/koha/admin/systempreferences.pl?tab=Catalogue">Catalogue
+				</a>
+			</td>
+			<td>
+				<a href="/cgi-bin/koha/admin/systempreferences.pl?tab=Circulation">Circulation
+				</a>
+			</td>
+			<td>
+				<a href="/cgi-bin/koha/admin/systempreferences.pl?tab=Members">Members
+				</a>
+			</td>
+			<td>
+				<a href="/cgi-bin/koha/admin/systempreferences.pl?tab=OPAC">OPAC
+				</a>
+			</td>
+			<td>
+				<a href="/cgi-bin/koha/admin/systempreferences.pl?tab=">Others
+				</a>
+			</td>
+		</tr>
+	</table>
 	<form action="/cgi-bin/koha/admin/systempreferences.pl" method="post">
 		<input type="text" name="searchfield" value="">
 		<input type="reset" name="reset" value="clr">
