--- a/koha-tmpl/intranet-tmpl/default/de/parameters/checkmarc.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/de/parameters/checkmarc.tmpl
@@ -1,17 +1,17 @@
 <!-- TMPL_INCLUDE NAME="parameters-top.inc" -->
 
 <div id="mainbloc">
-	<h1>&uuml;berpr&uuml;fe MARC Setup</h1>
+	<h1>&Uuml;berpr&uuml;fung der MARC-Struktur</h1>
 	<table>
 		<tr>
 			<th>Test</th>
-			<th>Treffer</th>
+			<th>Meldung</th>
 		</tr>
 	<!-- -------------------------------------------------------------------------------------------------------- -->
 	<!-- TMPL_IF NAME="itemnum" -->
 		<tr>
 			<td><b>itemnum</b></td>
-			<td><li>The field itemnum MUST be mapped </li>
+			<td><li>Das Feld itemnum MUSS zugeordnet sein </li>
 				<li>The correspounding subfield MUST be in with -1 (ignore) tab</td>
 		</tr>
 	<!-- TMPL_ELSE -->
