Displaying search results count

--- a/koha-tmpl/intranet-tmpl/default/en/acqui/histsearch.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/en/acqui/histsearch.tmpl
@@ -1,6 +1,8 @@
 <!-- TMPL_INCLUDE NAME="acquisitions-top.inc" -->
 <div id="mainbloc">
 	<h1 class="acquisition">Order search</h1>
+	<p class="resultcount"><!-- TMPL_VAR Name ="numresults" --> orders were found.
+	 </p>
 	<table>
 		<tr>
 			<th class="acquisition">&nbsp;</th>
