--- a/koha-tmpl/intranet-tmpl/default/en/members/member-quicksearch-results.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/en/members/member-quicksearch-results.tmpl
@@ -4,6 +4,8 @@
 <h1>Member Search</h1>
 
 <div class="bloc100">
+	<p><!-- TMPL_VAR Name ="numresults" --> records match you search.
+	 </p>
 	<table>
 		<tr>
 			<th>&nbsp;</th>
