--- a/koha-tmpl/intranet-tmpl/default/en/members/member.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/en/members/member.tmpl
@@ -17,6 +17,8 @@
 
 <div class="bloc100">
 	<div class="bloctitle">You Searched for <!-- TMPL_VAR NAME="member" --></div>
+	<p class="resultcount"><!-- TMPL_VAR Name ="numresults" --> members were found.
+	 </p>
 	<table>
 		<tr>
 			<th>Card</th>
